--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async defer src="http://maps.google.com/maps/api/js?key=AIzaSyCsBKD0WM5FYtOyXwbLTmzvpCmiskD0Vc4&language=ja"
-  type="text/javascript"></script>
+  <script async defer src="http://maps.google.com/maps/api/js?key=AIzaSyCsBKD0WM5FYtOyXwbLTmzvpCmiskD0Vc4"></script>
 </head>
 <body>
   <app-root></app-root>
