--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/JNKKKK/MoreToggles.css/output/moretoggles.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script async defer src="http://maps.google.com/maps/api/js?key=AIzaSyCsBKD0WM5FYtOyXwbLTmzvpCmiskD0Vc4"></script>
+  <script src="../node_modules/chart.js/src/chart.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
